[package]
name = "vmod_rers"
version = "0.0.11"
edition = "2021"

[dependencies]
lru = "0.13.0"
regex = "1.5"
varnish = { version = "0.4.0", features = ["ffi"] }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
